// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Run > Use Cases > 'DecodeJWT' > should execute with auth 'ADMIN' and input 'ALL_WITH_EXAMPLES' > hash = a5ab6a263a8ac4fa297e5e97522bccc607d1f053c3b2861daa197ca5c2c96d5d 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ALL_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "a5ab6a263a8ac4fa297e5e97522bccc607d1f053c3b2861daa197ca5c2c96d5d",
    "io": {
      "i": {
        "jwt": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c",
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "id": "356a192b-7913-404c-9457-4d18c28d46e6",
                "payload": {
                  "iat": 1516239022,
                  "name": "John Doe",
                  "sub": "1234567890",
                },
              },
            ],
            "total": 1,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'DecodeJWT' > should execute with auth 'ADMIN' and input 'ONLY_MANDATORY_WITH_EXAMPLES' > hash = 6b6c31199eb1a7cdbc088b68a75f254a08d87df358910b7579df80d525242f87 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_MANDATORY_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "6b6c31199eb1a7cdbc088b68a75f254a08d87df358910b7579df80d525242f87",
    "io": {
      "i": {
        "jwt": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c",
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "id": "da4b9237-bacc-4df1-9c07-60cab7aec4a8",
                "payload": {
                  "iat": 1516239022,
                  "name": "John Doe",
                  "sub": "1234567890",
                },
              },
            ],
            "total": 1,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'DecodeJWT' > should execute with auth 'ADMIN' and input 'ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPL…' > hash = c28927dff1453b9a10edf60eab20a11a891e2ba72d5b09e634dfc904e8e3b329 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: JWT must be filled],
    "hash": "c28927dff1453b9a10edf60eab20a11a891e2ba72d5b09e634dfc904e8e3b329",
    "io": {
      "i": {
        "jwt": undefined,
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'DecodeJWT' > should execute with auth 'ANONYMOUS' and input 'ALL_WITH_EXAMPLES' > hash = 4ab2178091ad70eed15061677287be8d5a664257bde85ebc8bc39c7e77f7103d 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ALL_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "4ab2178091ad70eed15061677287be8d5a664257bde85ebc8bc39c7e77f7103d",
    "io": {
      "i": {
        "jwt": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c",
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "id": "77de68da-ecd8-43ba-bbb5-8edb1c8e14d7",
                "payload": {
                  "iat": 1516239022,
                  "name": "John Doe",
                  "sub": "1234567890",
                },
              },
            ],
            "total": 1,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'DecodeJWT' > should execute with auth 'ANONYMOUS' and input 'ONLY_MANDATORY_WITH_EXAMPLES' > hash = 7bff4712a23f5feb053ed1da11795ccaa1fb88b49ebd9690875b68972cecdc5f 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_MANDATORY_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "7bff4712a23f5feb053ed1da11795ccaa1fb88b49ebd9690875b68972cecdc5f",
    "io": {
      "i": {
        "jwt": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c",
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "id": "1b645389-2473-4467-9073-72d45eb05abc",
                "payload": {
                  "iat": 1516239022,
                  "name": "John Doe",
                  "sub": "1234567890",
                },
              },
            ],
            "total": 1,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'DecodeJWT' > should execute with auth 'ANONYMOUS' and input 'ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPL…' > hash = 8a1f46b71e99d5366055b7057b37ab4e137048fbe34416ce8e10754dec50e43e 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: JWT must be filled],
    "hash": "8a1f46b71e99d5366055b7057b37ab4e137048fbe34416ce8e10754dec50e43e",
    "io": {
      "i": {
        "jwt": undefined,
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'DecodeJWT' > should execute with auth 'REGULAR' and input 'ALL_WITH_EXAMPLES' > hash = f6157dd2b0983730cd35609b928bbafe7627a852ee41f0a82780926ec705d02d 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ALL_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "f6157dd2b0983730cd35609b928bbafe7627a852ee41f0a82780926ec705d02d",
    "io": {
      "i": {
        "jwt": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c",
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "id": "ac3478d6-9a3c-41fa-a2e6-0f5c3696165a",
                "payload": {
                  "iat": 1516239022,
                  "name": "John Doe",
                  "sub": "1234567890",
                },
              },
            ],
            "total": 1,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'DecodeJWT' > should execute with auth 'REGULAR' and input 'ONLY_MANDATORY_WITH_EXAMPLES' > hash = 6b87b6b7c1c3c2922f86a05207cd4f8128f48dcef5b357e6bca98752d8a25c3c 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_MANDATORY_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "6b87b6b7c1c3c2922f86a05207cd4f8128f48dcef5b357e6bca98752d8a25c3c",
    "io": {
      "i": {
        "jwt": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c",
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "id": "c1dfd96e-ea8c-42b6-a785-275bca38ac26",
                "payload": {
                  "iat": 1516239022,
                  "name": "John Doe",
                  "sub": "1234567890",
                },
              },
            ],
            "total": 1,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'DecodeJWT' > should execute with auth 'REGULAR' and input 'ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPL…' > hash = d5e0af06b459916ae68f5a8b0ea096ae0ac541ed2103773aaec64c4f73e3335d 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: JWT must be filled],
    "hash": "d5e0af06b459916ae68f5a8b0ea096ae0ac541ed2103773aaec64c4f73e3335d",
    "io": {
      "i": {
        "jwt": undefined,
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'ExportAsana' > should execute with auth 'ADMIN' and input 'ALL_WITH_EXAMPLES' > hash = 6e550fccc8f9f5e661f7d3eaed51728b9d6fbf7122581ead12687ebc7cbbdb09 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ALL_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: Endpoint https://app.asana.com/api/1.0/projects/ZNHD34AQW4CV7/tasks?limit=100&opt_expand=%28this%7Csubtasks%252B%29 not defined in FakeHTTPAPICallExecutor.entries],
    "hash": "6e550fccc8f9f5e661f7d3eaed51728b9d6fbf7122581ead12687ebc7cbbdb09",
    "io": {
      "i": {
        "accessToken": "fmUUNWXazWH4",
        "projectId": "ZNHD34AQW4CV7",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'ExportAsana' > should execute with auth 'ADMIN' and input 'ONLY_MANDATORY_WITH_EXAMPLES' > hash = c401ec1aebfde40311f0ad542fa3f51016c1c6e6e94628f9c9ca44e4d49a02de 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_MANDATORY_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: Endpoint https://app.asana.com/api/1.0/projects/ZNHD34AQW4CV7/tasks?limit=100&opt_expand=%28this%7Csubtasks%252B%29 not defined in FakeHTTPAPICallExecutor.entries],
    "hash": "c401ec1aebfde40311f0ad542fa3f51016c1c6e6e94628f9c9ca44e4d49a02de",
    "io": {
      "i": {
        "accessToken": "fmUUNWXazWH4",
        "projectId": "ZNHD34AQW4CV7",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'ExportAsana' > should execute with auth 'ADMIN' and input 'ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPL…' > hash = 0a51999944fbc84a1ace597121e3a9f4778a4377e0845087617b76a1b7d2a957 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: Access Token must be filled],
    "hash": "0a51999944fbc84a1ace597121e3a9f4778a4377e0845087617b76a1b7d2a957",
    "io": {
      "i": {
        "accessToken": undefined,
        "projectId": undefined,
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'ExportAsana' > should execute with auth 'ANONYMOUS' and input 'ALL_WITH_EXAMPLES' > hash = c6c790be9d055dba220df7553f359f19781aef4bf80f8c96ca228a86271eecd9 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ALL_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: Endpoint https://app.asana.com/api/1.0/projects/ZNHD34AQW4CV7/tasks?limit=100&opt_expand=%28this%7Csubtasks%252B%29 not defined in FakeHTTPAPICallExecutor.entries],
    "hash": "c6c790be9d055dba220df7553f359f19781aef4bf80f8c96ca228a86271eecd9",
    "io": {
      "i": {
        "accessToken": "fmUUNWXazWH4",
        "projectId": "ZNHD34AQW4CV7",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'ExportAsana' > should execute with auth 'ANONYMOUS' and input 'ONLY_MANDATORY_WITH_EXAMPLES' > hash = 083db2c3b2802ded084ba7af0c6c81b6795f1ad97cfe156f1f77b3ed59fec74f 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_MANDATORY_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: Endpoint https://app.asana.com/api/1.0/projects/ZNHD34AQW4CV7/tasks?limit=100&opt_expand=%28this%7Csubtasks%252B%29 not defined in FakeHTTPAPICallExecutor.entries],
    "hash": "083db2c3b2802ded084ba7af0c6c81b6795f1ad97cfe156f1f77b3ed59fec74f",
    "io": {
      "i": {
        "accessToken": "fmUUNWXazWH4",
        "projectId": "ZNHD34AQW4CV7",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'ExportAsana' > should execute with auth 'ANONYMOUS' and input 'ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPL…' > hash = c388079a430ccfd826f532341e8ab31df27a6922c4d701141e309d0ffa44d496 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: Access Token must be filled],
    "hash": "c388079a430ccfd826f532341e8ab31df27a6922c4d701141e309d0ffa44d496",
    "io": {
      "i": {
        "accessToken": undefined,
        "projectId": undefined,
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'ExportAsana' > should execute with auth 'REGULAR' and input 'ALL_WITH_EXAMPLES' > hash = 22e6b3b89db9480b9a396305a751109963232234b8f4bd039b156572da2c18ac 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ALL_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: Endpoint https://app.asana.com/api/1.0/projects/ZNHD34AQW4CV7/tasks?limit=100&opt_expand=%28this%7Csubtasks%252B%29 not defined in FakeHTTPAPICallExecutor.entries],
    "hash": "22e6b3b89db9480b9a396305a751109963232234b8f4bd039b156572da2c18ac",
    "io": {
      "i": {
        "accessToken": "fmUUNWXazWH4",
        "projectId": "ZNHD34AQW4CV7",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'ExportAsana' > should execute with auth 'REGULAR' and input 'ONLY_MANDATORY_WITH_EXAMPLES' > hash = 02bae67c0be4aec5f311c85d17ae4a87a94328f23752ade05d3255fa3770bba9 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_MANDATORY_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: Endpoint https://app.asana.com/api/1.0/projects/ZNHD34AQW4CV7/tasks?limit=100&opt_expand=%28this%7Csubtasks%252B%29 not defined in FakeHTTPAPICallExecutor.entries],
    "hash": "02bae67c0be4aec5f311c85d17ae4a87a94328f23752ade05d3255fa3770bba9",
    "io": {
      "i": {
        "accessToken": "fmUUNWXazWH4",
        "projectId": "ZNHD34AQW4CV7",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'ExportAsana' > should execute with auth 'REGULAR' and input 'ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPL…' > hash = ae47867332d8260928d867b82a34df6433a8a13b112907e6b9e4ceaee2fd4a7b 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: Access Token must be filled],
    "hash": "ae47867332d8260928d867b82a34df6433a8a13b112907e6b9e4ceaee2fd4a7b",
    "io": {
      "i": {
        "accessToken": undefined,
        "projectId": undefined,
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'GenerateMiscData' > should execute with auth 'ADMIN' and input 'ALL_WITH_EXAMPLES' > hash = b5c67487e6a0dcca67ee10c3f8ee3884bd7f21b0195273830520b6bad9289fe9 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ALL_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "b5c67487e6a0dcca67ee10c3f8ee3884bd7f21b0195273830520b6bad9289fe9",
    "io": {
      "i": {
        "uuidCount": 10,
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "id": "902ba3cd-a188-4801-994b-6e1b452790cc",
                "label": "Timestamp",
                "value": "1652646210",
              },
            ],
            "total": 1,
          },
          "_1": {
            "items": [
              {
                "id": "fe5dbbce-a5ce-4e29-88b8-c69bcfdfde89",
                "value": "0ade7c2c-f97f-45d0-8997-5f4d720d1fa6",
              },
              {
                "id": "b1d57811-11d8-4f7b-bfe4-5a0852e59758",
                "value": "17ba0791-499d-4908-833b-80f37c5fbc89",
              },
              {
                "id": "7b52009b-64fd-4a2a-89e6-d8a939753077",
                "value": "bd307a3e-c329-410a-acff-8fb87480823d",
              },
              {
                "id": "fa35e192-121e-4bf3-9abf-9f5ea6abdbcb",
                "value": "f1abd670-358e-436c-b129-6e66b3b66c38",
              },
              {
                "id": "1574bddb-75c7-4a6f-9225-1d61e2993b51",
                "value": "0716d970-8d32-4ffb-aa00-818614779e77",
              },
              {
                "id": "9e6a55b6-b456-4e65-aa23-be9d623ca505",
                "value": "b3f0c7f6-bb76-4af1-be91-d9e74eabfeb1",
              },
              {
                "id": "91032ad7-bbcb-4cf7-a875-e8e8207dcfba",
                "value": "472b07b9-fcf2-4245-9e87-81e944bf5f77",
              },
              {
                "id": "12c6fc06-c99a-4623-b5ee-b3f43dfd832b",
                "value": "d435a6cd-d786-400d-bf20-4ee7c2ef942d",
              },
              {
                "id": "4d134bc0-7221-4ace-adf3-85dae143139d",
                "value": "f6e1126c-edeb-423e-9463-aee73f9df087",
              },
              {
                "id": "887309d0-48be-4f83-ad3e-abf2a79a64a3",
                "value": "bc33ea4e-26e5-41af-9408-321416956113",
              },
            ],
            "total": 10,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'GenerateMiscData' > should execute with auth 'ADMIN' and input 'ONLY_MANDATORY_WITH_EXAMPLES' > hash = d8af11d0575ee444518dea52b3fed82fcd415c2ff9cda5c6ea2c677007065012 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_MANDATORY_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "d8af11d0575ee444518dea52b3fed82fcd415c2ff9cda5c6ea2c677007065012",
    "io": {
      "i": {
        "uuidCount": 12,
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "id": "0a57cb53-ba59-446f-84b6-92527a38a87c",
                "label": "Timestamp",
                "value": "1652646210",
              },
            ],
            "total": 1,
          },
          "_1": {
            "items": [
              {
                "id": "7719a1c7-82a1-4a91-8031-a682a0a2f865",
                "value": "22d200f8-670d-4db3-a253-a90eee509847",
              },
              {
                "id": "63266754-7e7c-43e0-8665-47863e1207a8",
                "value": "cb4e5208-b4cd-4726-8b20-8e49452ed6e8",
              },
              {
                "id": "b6692ea5-df92-4cad-a91c-20319a6fffd7",
                "value": "f1f836cb-4ea6-4fb2-a0b1-b99f41ad8b10",
              },
              {
                "id": "972a67c4-8192-428a-b497-9d9a35164c12",
                "value": "fc074d50-1302-4b2b-93e2-554793fcaf50",
              },
              {
                "id": "cb7a1d77-5e80-4fd1-ae40-49f7dca9e041",
                "value": "5b384ce3-2d8c-4ef0-abc3-a139d4cac0a2",
              },
              {
                "id": "ca3512f4-dfa9-4a03-969c-5a670a4c91a1",
                "value": "af3e1334-28b9-425c-95bc-59fe534248e6",
              },
              {
                "id": "761f22b2-c159-4d0b-b87e-0b606f990ba4",
                "value": "92cfceb3-9d57-4914-ad8b-14d0e37643de",
              },
              {
                "id": "0286dd55-2c9b-4a9a-a9ec-b3759e7b9477",
                "value": "98fbc42f-aedc-4249-a397-cb5962ea3a3f",
              },
              {
                "id": "fb644351-560d-4296-be6d-a332236b1f8d",
                "value": "fe2ef495-a115-4561-9729-49784c16bf23",
              },
              {
                "id": "827bfc45-8708-40b4-8200-9c9c9836f7e4",
                "value": "64e095fe-763f-4624-9837-8753f9402623",
              },
              {
                "id": "2e01e174-6789-4f7c-933d-baa00e1459d2",
                "value": "e1822db4-70e6-4d09-8aff-d0956d743cb0",
              },
              {
                "id": "b7eb6c68-9c03-4217-8797-66fdb77c3bac",
                "value": "a9334987-ece7-4b6f-a8bf-130ef00b7484",
              },
            ],
            "total": 12,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'GenerateMiscData' > should execute with auth 'ADMIN' and input 'ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPL…' > hash = 1703117595df60ab148ddff8a2ed7fc67135b0744326198493693895ff6ce102 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "1703117595df60ab148ddff8a2ed7fc67135b0744326198493693895ff6ce102",
    "io": {
      "i": {
        "uuidCount": 12,
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "id": "c5b76da3-e608-434e-9b07-244cd9b875ee",
                "label": "Timestamp",
                "value": "1652646210",
              },
            ],
            "total": 1,
          },
          "_1": {
            "items": [
              {
                "id": "80e28a51-cbc2-4fa4-bd34-938c5e593b36",
                "value": "8effee40-9c62-4e1a-ad8f-5033631840e6",
              },
              {
                "id": "54ceb912-56e8-490e-874a-a752a6e0650a",
                "value": "9109c85a-45b7-43f8-bf14-13a405549a2c",
              },
              {
                "id": "667be543-b022-44b7-a241-19adc3a72547",
                "value": "5a5b0f9b-7d3f-4fc8-8c3c-ef8fd8efaaa6",
              },
              {
                "id": "e6c3dd63-0428-4d54-8341-72b8fd2735fe",
                "value": "6c1e671f-9af5-446d-9c1a-52067bdf0e53",
              },
              {
                "id": "511a418e-7259-4eb7-a33f-703f04c3fa16",
                "value": "a17554a0-d2b1-4a66-8c0e-73900184544f",
              },
              {
                "id": "c66c6517-5fec-4310-bb3b-587be9b5b230",
                "value": "2a459380-709e-4fe4-ac2d-ae5733c73225",
              },
              {
                "id": "59129aac-fb6c-4bbe-ac52-f30ef3424209",
                "value": "4d89d294-cd4c-49f2-8a57-dc24a53ffb3e",
              },
              {
                "id": "b4c96d80-854d-427e-b6d8-cc9e21960eeb",
                "value": "a72b2006-2ec2-447a-b2ce-b97ac1bee818",
              },
              {
                "id": "b7103ca2-78a7-4cad-8f7d-065acda0c2e8",
                "value": "d02560dd-9d7d-4446-b627-745bd6701e80",
              },
              {
                "id": "c097638f-92de-40ba-8d6c-696b26e6e601",
                "value": "35e995c1-07a7-4cae-b833-bb3b79f9f547",
              },
              {
                "id": "1f1362ea-41d1-4c65-be32-1c0a378a2015",
                "value": "450ddec8-dd20-4c2e-aab1-aeeaa90e85e5",
              },
              {
                "id": "d54ad009-d179-4e34-a683-cfc3603979bc",
                "value": "d321d6f7-ccf9-4b51-940e-c9d933f20898",
              },
            ],
            "total": 12,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'GenerateMiscData' > should execute with auth 'ANONYMOUS' and input 'ALL_WITH_EXAMPLES' > hash = 2dfe392c7d81e0b97930e3ecdd9bab998f38d99e90841f72544ab7df4fd20187 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ALL_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "2dfe392c7d81e0b97930e3ecdd9bab998f38d99e90841f72544ab7df4fd20187",
    "io": {
      "i": {
        "uuidCount": 10,
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "id": "eb4ac303-3e8a-4359-9e0f-cefa8c26ce3f",
                "label": "Timestamp",
                "value": "1652646210",
              },
            ],
            "total": 1,
          },
          "_1": {
            "items": [
              {
                "id": "b74f5ee9-4614-45ba-9ca4-c72a7108a239",
                "value": "b888b298-26bb-43dc-9314-37e723738383",
              },
              {
                "id": "1d513c0b-cbe3-4b2e-b440-e5e14d0b22ef",
                "value": "76546f9a-641e-4e2b-aab5-06b96df1688d",
              },
              {
                "id": "7d7116e2-3efe-4729-acad-5e6f033d9a96",
                "value": "be461a0c-d1fd-4052-a69c-3fd94f8cf5f6",
              },
              {
                "id": "1352246e-3327-4e9d-bc90-90a434fa72cf",
                "value": "3c26dffc-8a2e-4804-9fe2-c8a1195cfaa5",
              },
              {
                "id": "e62d7f1e-b43d-47c2-82d2-f164ba61297e",
                "value": "b37f6ddc-efad-4e86-9783-7d3177f9ef24",
              },
              {
                "id": "16b06bd9-b738-435e-ad13-4fe8d596e9ab",
                "value": "2d0c8af8-07ef-45ac-97ca-fb2973d866ba",
              },
              {
                "id": "4cd66dfa-bbd9-44f8-86c4-414b07cdb45d",
                "value": "8ee51caa-a2c2-44ee-ae5b-4b7ef5a89db7",
              },
              {
                "id": "08a35293-e09f-4084-9409-6c1c1b3819ed",
                "value": "215bb47d-a8fa-4334-ab85-8ac3db09b033",
              },
              {
                "id": "8e63fd3e-7779-4b10-a589-b1ba1e4441c7",
                "value": "6fb84aed-32fa-4d12-99ee-1e77c8fd2b1a",
              },
              {
                "id": "812ed456-2d32-4136-ba7b-813aa9cd2cf0",
                "value": "31bd9b9f-5f7b-438e-81b5-6183a2f3008b",
              },
            ],
            "total": 10,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'GenerateMiscData' > should execute with auth 'ANONYMOUS' and input 'ONLY_MANDATORY_WITH_EXAMPLES' > hash = f0f9e421e1da17f52f604cd0e00b47af1bee24e9b377f04bd019e35aeb7860dc 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_MANDATORY_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "f0f9e421e1da17f52f604cd0e00b47af1bee24e9b377f04bd019e35aeb7860dc",
    "io": {
      "i": {
        "uuidCount": 12,
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "id": "9a79be61-1e02-47e1-9943-da0737c6c51b",
                "label": "Timestamp",
                "value": "1652646210",
              },
            ],
            "total": 1,
          },
          "_1": {
            "items": [
              {
                "id": "310b86e0-b62b-4285-a2fc-91c7be5380a9",
                "value": "dbc0f004-8544-47f5-9fb1-6ab863a3a172",
              },
              {
                "id": "c8306ae1-39ac-48f4-b293-2286151dc0ec",
                "value": "934385f5-3d1b-40c1-b849-3e44d0dfd4c8",
              },
              {
                "id": "78a8efcb-aaa1-49a3-8f9f-327aa89d0b6a",
                "value": "e114c448-f4ab-4554-ad14-eff3d66dfeb3",
              },
              {
                "id": "7224f997-fc14-4baa-8b7f-81c1eda6fcc3",
                "value": "524e05dc-7723-4f3a-95da-b766aaa59a9e",
              },
              {
                "id": "17503a6b-2326-409f-bc4e-3a7c03874c73",
                "value": "a1422e6a-1686-40cd-9214-ac5e31ca01ae",
              },
              {
                "id": "5e796e48-332a-4414-ab10-ca0f86e65d9b",
                "value": "6216f8a7-5fd5-4b3d-9f22-b6f9958cdede",
              },
              {
                "id": "601ca99d-55f0-4a2e-8e73-6676b606a4d3",
                "value": "e993215b-fdaa-415f-aea0-0fafc1918f54",
              },
              {
                "id": "ecb7937d-b58e-49de-a0c4-7db88463d85e",
                "value": "efa6e44d-fa01-4524-9be2-73ecd84a97f5",
              },
              {
                "id": "683e725c-03a8-4baa-ad26-23231644e944",
                "value": "d0e2dbb0-bac1-417d-b60a-af52c01a2a4b",
              },
              {
                "id": "12f0de3d-c76e-467d-a1ed-85125716e02e",
                "value": "a2e33d34-4f27-4e10-8d4a-8efeabc7ae8a",
              },
              {
                "id": "775bc5c3-0e27-40e5-a211-5d136e7f7edb",
                "value": "8bd7954c-40c1-459a-900f-71ea3a266732",
              },
              {
                "id": "05a8ea53-82b9-4d88-9261-bb3eed0527d1",
                "value": "40bd0015-6308-4fc3-9165-329ea1ff5c5e",
              },
            ],
            "total": 12,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'GenerateMiscData' > should execute with auth 'ANONYMOUS' and input 'ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPL…' > hash = 514ad5d00fff4717eee102dc3b2bb2dde67fe26f15c09eaecd0b1376d515f91a 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "514ad5d00fff4717eee102dc3b2bb2dde67fe26f15c09eaecd0b1376d515f91a",
    "io": {
      "i": {
        "uuidCount": 12,
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "id": "f38cfe2e-2fac-4cc7-82ba-d63f91ad5563",
                "label": "Timestamp",
                "value": "1652646210",
              },
            ],
            "total": 1,
          },
          "_1": {
            "items": [
              {
                "id": "0ca9277f-91e4-4054-b67f-69afeb042671",
                "value": "114d4eef-de1d-4e39-83e7-a79f04c72feb",
              },
              {
                "id": "008451a0-5e1e-4aa3-ac75-119df950d405",
                "value": "b4182bff-4b3c-475f-9e54-f4990f9bd153",
              },
              {
                "id": "8b7471f4-ae0b-459f-9f0a-425068c05d96",
                "value": "2a7541ba-bb57-434e-9631-ffa2b5639e24",
              },
              {
                "id": "e794a80e-b109-462d-979d-f51db6d52e22",
                "value": "91dfde1d-6e00-4e42-af64-a59776234f1f",
              },
              {
                "id": "d30f79cf-7fef-47bd-ba56-11719f936539",
                "value": "95e815d1-541b-46f3-98cf-ffbe66ab3af0",
              },
              {
                "id": "40f7c01f-4189-4100-b1ad-ccd9c604a128",
                "value": "9e071a3a-594a-4964-8bef-e784f8a6afaa",
              },
              {
                "id": "e1a864f0-b77f-4c89-b948-27a9035355dc",
                "value": "56ad4d4d-eaec-4846-9c41-9b4a8ea7bfc1",
              },
              {
                "id": "fa755791-d050-4bb0-aae7-15a2072de724",
                "value": "c28aca23-f1ef-4718-a464-383d925c6684",
              },
              {
                "id": "c9ca4427-6565-4fc9-8e9e-779c34d0d225",
                "value": "2a2b47bf-21a3-42f2-a7de-ccbb420567f3",
              },
              {
                "id": "f47aea8b-dcbd-4179-a1f3-d91e6afeeb25",
                "value": "7320828c-9153-42a9-848d-6bc45d354423",
              },
              {
                "id": "50336bc6-87eb-461e-a9fb-0ddb8cf2b7e6",
                "value": "3fcfb99e-c010-44a8-ba36-4f43169465d9",
              },
              {
                "id": "b3c0730c-f3f5-4613-a405-61e67c871fdb",
                "value": "536fb693-4062-440c-864c-a2eef82b0be8",
              },
            ],
            "total": 12,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'GenerateMiscData' > should execute with auth 'REGULAR' and input 'ALL_WITH_EXAMPLES' > hash = b359de977763a9b4f68d02677195e389cde4e855d124947b8a26bd7f405f1ab0 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ALL_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "b359de977763a9b4f68d02677195e389cde4e855d124947b8a26bd7f405f1ab0",
    "io": {
      "i": {
        "uuidCount": 10,
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "id": "39dfc9ff-d325-4c48-89af-5dd55c4b3e4b",
                "label": "Timestamp",
                "value": "1652646210",
              },
            ],
            "total": 1,
          },
          "_1": {
            "items": [
              {
                "id": "13682ac4-1860-4aa0-9663-69d46bbf282f",
                "value": "b16a457a-3302-47c1-b456-3df2ffc96dcc",
              },
              {
                "id": "ac264602-8f5b-4b9b-bf7a-967f4ac71b88",
                "value": "a6f16ab4-83da-4847-9431-a822e6c85e14",
              },
              {
                "id": "06349be7-0bd2-45dd-98d3-6b9b8dba0a05",
                "value": "9d8974ba-ddfc-4e53-b008-29f37e5fc88b",
              },
              {
                "id": "6052521b-7625-431d-8ee9-cc706732484f",
                "value": "097ccd4f-03d9-4201-9101-c1221009e534",
              },
              {
                "id": "a3d12597-f93e-40f7-b6a2-29cebb1c3e10",
                "value": "6b6277af-cb65-4335-a554-5904e95c2fa2",
              },
              {
                "id": "be057d4c-a44c-40a0-bc1d-fcffd99cce14",
                "value": "0159a99e-d28b-4581-8906-08d24ada9dec",
              },
              {
                "id": "ae1e7198-bc30-44ff-9b2e-9ff520c30bc1",
                "value": "fd937516-49ac-4ea8-b877-2ba49c8c1fe0",
              },
              {
                "id": "a929eb33-e338-438d-aa91-e955ce762376",
                "value": "74cbd2c2-15c2-413c-8b61-10ada96de889",
              },
              {
                "id": "69e56976-fc9b-4e70-81d2-eaa85c0c8dea",
                "value": "708a77db-476d-437e-94b8-bf4663fc79b3",
              },
              {
                "id": "f76b2ea6-b45e-4f3b-88e4-399145cc17a0",
                "value": "2659fc51-9890-4924-b82b-4475ddd71b05",
              },
            ],
            "total": 10,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'GenerateMiscData' > should execute with auth 'REGULAR' and input 'ONLY_MANDATORY_WITH_EXAMPLES' > hash = 45a000fe21f8bd94754e0386fbd0d3b3cc61b8fbca47203ff8556f8f95464cd8 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_MANDATORY_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "45a000fe21f8bd94754e0386fbd0d3b3cc61b8fbca47203ff8556f8f95464cd8",
    "io": {
      "i": {
        "uuidCount": 12,
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "id": "717b2f3d-8816-4305-8909-7908c134e172",
                "label": "Timestamp",
                "value": "1652646210",
              },
            ],
            "total": 1,
          },
          "_1": {
            "items": [
              {
                "id": "94940e53-4aed-43f6-99bb-77c6322f6641",
                "value": "c1aa04bf-421e-4b38-83d1-8933e9994d3f",
              },
              {
                "id": "572e2073-8130-4ddc-bc38-9f2ab14f4e4b",
                "value": "d094700e-379f-4fb3-b543-e25c77f8e4b3",
              },
              {
                "id": "04f1241e-d2b1-4531-82c8-53ce1eeff952",
                "value": "5c8f5ac0-b7ad-43c1-9079-3ad1fcf4d3c8",
              },
              {
                "id": "26e7458d-c56a-4283-8fad-ba7bd2c1aa10",
                "value": "25293f27-61d6-48cc-b0c1-9515861842d7",
              },
              {
                "id": "9e44d277-1c05-4d44-8582-45eda6cb3346",
                "value": "ec7f1f65-0671-46f3-b2bd-1037de8a18d0",
              },
              {
                "id": "aee544ce-ddfe-4ab6-9a02-f82bdf8ce6ea",
                "value": "58f07449-07ea-4bd8-a0f5-1e568f153628",
              },
              {
                "id": "dc685e2c-3fd7-43a6-b944-383a54aa249e",
                "value": "bcf814ab-4150-4290-ab1b-8158ebda6ee6",
              },
              {
                "id": "cfa2ed2a-ac6d-41f4-8ca9-cba73e1e8946",
                "value": "87d538ef-1c1d-4716-83e6-0f278446c864",
              },
              {
                "id": "f6746266-3a51-4121-bfad-a791890b558e",
                "value": "acf1fffc-01dc-4193-aa07-d0b1de723c29",
              },
              {
                "id": "e54183e2-a040-46c0-9e61-eb22d542e3d5",
                "value": "3a2dc677-d8e8-4ac8-9654-1744e288d504",
              },
              {
                "id": "2fcc820f-c1d9-4b1e-8a3a-219c7e3689bb",
                "value": "19a448c0-1aa2-47d5-9979-473b647e2824",
              },
              {
                "id": "14bb99f8-1147-4270-9f53-a1d75337b2ec",
                "value": "2a79f141-2094-4873-882b-7823caabe2fc",
              },
            ],
            "total": 12,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'GenerateMiscData' > should execute with auth 'REGULAR' and input 'ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPL…' > hash = 3157687942c4489db6d212316297a3ea511a99f55a80324b686ac8f4690bba22 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "3157687942c4489db6d212316297a3ea511a99f55a80324b686ac8f4690bba22",
    "io": {
      "i": {
        "uuidCount": 12,
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "id": "752ae7bd-bb96-4f25-a80b-55990570beab",
                "label": "Timestamp",
                "value": "1652646210",
              },
            ],
            "total": 1,
          },
          "_1": {
            "items": [
              {
                "id": "4dea1dae-dbe9-4c1d-a43b-0f0eb8ab57c7",
                "value": "61188f24-3968-47ba-bca3-8919a158766d",
              },
              {
                "id": "c837307a-9a2a-44d0-8ca6-1a4f1bd848ba",
                "value": "2952aeca-0fe1-4cf3-90ed-e96c437acb94",
              },
              {
                "id": "9f9af029-585b-4014-a07c-d3910ca976cf",
                "value": "7f03f3f2-febc-46f3-ba83-2d98251b0c98",
              },
              {
                "id": "1e7b95c5-6146-47fd-8de7-0eb7f2d10913",
                "value": "a165fbd6-1c27-4745-b187-eaac7182d9c0",
              },
              {
                "id": "1cc64195-4099-4249-a0e4-ef0402da3fd0",
                "value": "5f1cd7c3-fb68-4e7c-a79f-8c3396661067",
              },
              {
                "id": "4afa8f9e-9075-4f0f-919a-124a1dfbba19",
                "value": "3be76cc0-16a8-4850-a619-56c5f71d14c6",
              },
              {
                "id": "baab3401-8148-4924-a3ef-4c49b5a92440",
                "value": "acfdd18e-a7f4-42ba-b413-2ba977dc2072",
              },
              {
                "id": "135debd4-8370-46bf-86c7-bfc5d1e0c6a3",
                "value": "1b4a364f-76e9-4a80-b351-6100ed65590c",
              },
              {
                "id": "e2154fea-5da2-4d0d-9732-ff30931723c2",
                "value": "19187dc9-8dce-42fa-8c4e-8e05b341a9b7",
              },
              {
                "id": "9a15f42d-1c52-4c30-aeb9-1c3df1216db2",
                "value": "828f7204-39ce-4aeb-bacc-7a7babce0a28",
              },
              {
                "id": "0bad865a-02d8-4f49-b068-7ffe1b80822b",
                "value": "49e3d046-636e-46b2-982e-e046db8e6eb9",
              },
              {
                "id": "3d5bdf10-7de5-46ce-b7e8-ce48a61b585f",
                "value": "c0ba17c2-3a26-4f8c-b144-78bc69f30963",
              },
            ],
            "total": 12,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'GeocodeAddress' > should execute with auth 'ADMIN' and input 'ALL_WITH_EXAMPLES' > hash = ae5217860462970e9d3baea807e35ef18d5c3a2c4f7cebd69f40e26486932e56 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ALL_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "ae5217860462970e9d3baea807e35ef18d5c3a2c4f7cebd69f40e26486932e56",
    "io": {
      "i": {
        "address": "55 Rue du Faubourg Saint-Honoré, 75008 Paris",
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "geolocation": {
                  "lat": 48.87063,
                  "lng": 2.316931,
                },
                "googleMapsURL": "https://www.google.com/maps?q=loc:@48.87063,2.316931",
                "id": "f37062d9-a655-43a4-af2b-a13299ba77a3",
              },
            ],
            "total": 1,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'GeocodeAddress' > should execute with auth 'ADMIN' and input 'ONLY_MANDATORY_WITH_EXAMPLES' > hash = 2adaed08521fbd5031830558b320b96f808a9094ffca6468b34fb6f02180ccb2 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_MANDATORY_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "2adaed08521fbd5031830558b320b96f808a9094ffca6468b34fb6f02180ccb2",
    "io": {
      "i": {
        "address": "55 Rue du Faubourg Saint-Honoré, 75008 Paris",
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "geolocation": {
                  "lat": 48.87063,
                  "lng": 2.316931,
                },
                "googleMapsURL": "https://www.google.com/maps?q=loc:@48.87063,2.316931",
                "id": "9a70776c-7433-42cf-8f68-8e5251267333",
              },
            ],
            "total": 1,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'GeocodeAddress' > should execute with auth 'ADMIN' and input 'ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPL…' > hash = 88e47d5cd6455cd0c963db5b95552ba731b2d620e7f5d2f6ad7c76dbbce4019a 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: Address must be filled],
    "hash": "88e47d5cd6455cd0c963db5b95552ba731b2d620e7f5d2f6ad7c76dbbce4019a",
    "io": {
      "i": {
        "address": undefined,
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'GeocodeAddress' > should execute with auth 'ANONYMOUS' and input 'ALL_WITH_EXAMPLES' > hash = 26c74d4d4fa91f7b54f8b8a63134580af59829af1d0ab1ce71f9f8ecc5715538 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ALL_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "26c74d4d4fa91f7b54f8b8a63134580af59829af1d0ab1ce71f9f8ecc5715538",
    "io": {
      "i": {
        "address": "55 Rue du Faubourg Saint-Honoré, 75008 Paris",
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "geolocation": {
                  "lat": 48.87063,
                  "lng": 2.316931,
                },
                "googleMapsURL": "https://www.google.com/maps?q=loc:@48.87063,2.316931",
                "id": "1c6637a8-f2e1-475e-86ff-9984894d6bd1",
              },
            ],
            "total": 1,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'GeocodeAddress' > should execute with auth 'ANONYMOUS' and input 'ONLY_MANDATORY_WITH_EXAMPLES' > hash = 19dbb2a73b12e2a32215da1162b24fdec6783f806e431084e59d848a560b5bd0 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_MANDATORY_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "19dbb2a73b12e2a32215da1162b24fdec6783f806e431084e59d848a560b5bd0",
    "io": {
      "i": {
        "address": "55 Rue du Faubourg Saint-Honoré, 75008 Paris",
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "geolocation": {
                  "lat": 48.87063,
                  "lng": 2.316931,
                },
                "googleMapsURL": "https://www.google.com/maps?q=loc:@48.87063,2.316931",
                "id": "af06318c-33c8-441c-b008-3ee23dbe1942",
              },
            ],
            "total": 1,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'GeocodeAddress' > should execute with auth 'ANONYMOUS' and input 'ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPL…' > hash = e88b06a18b3bc354ecd087f7308a1f8090b2b84c41c04807ce3aaecfa9fc0aec 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: Address must be filled],
    "hash": "e88b06a18b3bc354ecd087f7308a1f8090b2b84c41c04807ce3aaecfa9fc0aec",
    "io": {
      "i": {
        "address": undefined,
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'GeocodeAddress' > should execute with auth 'REGULAR' and input 'ALL_WITH_EXAMPLES' > hash = 207e1fd27a959d89811c46ab8e2c72979cab2c20fe1500d80b107a707569b0b7 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ALL_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "207e1fd27a959d89811c46ab8e2c72979cab2c20fe1500d80b107a707569b0b7",
    "io": {
      "i": {
        "address": "55 Rue du Faubourg Saint-Honoré, 75008 Paris",
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "geolocation": {
                  "lat": 48.87063,
                  "lng": 2.316931,
                },
                "googleMapsURL": "https://www.google.com/maps?q=loc:@48.87063,2.316931",
                "id": "bc15c774-dca4-499e-a6fb-42da7d216ca5",
              },
            ],
            "total": 1,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'GeocodeAddress' > should execute with auth 'REGULAR' and input 'ONLY_MANDATORY_WITH_EXAMPLES' > hash = b275cd055a7c959b784804b4dc1f541aa361547ece91a674ae5261337d7b66da 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_MANDATORY_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "b275cd055a7c959b784804b4dc1f541aa361547ece91a674ae5261337d7b66da",
    "io": {
      "i": {
        "address": "55 Rue du Faubourg Saint-Honoré, 75008 Paris",
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "geolocation": {
                  "lat": 48.87063,
                  "lng": 2.316931,
                },
                "googleMapsURL": "https://www.google.com/maps?q=loc:@48.87063,2.316931",
                "id": "cfe21c68-00c8-4f06-97d0-683b1535821c",
              },
            ],
            "total": 1,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'GeocodeAddress' > should execute with auth 'REGULAR' and input 'ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPL…' > hash = 25bc7fd8f1667dbf965783d726005a9741c3ccf8bde6c539f0289bfcfc79be36 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: Address must be filled],
    "hash": "25bc7fd8f1667dbf965783d726005a9741c3ccf8bde6c539f0289bfcfc79be36",
    "io": {
      "i": {
        "address": undefined,
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'PromptLLM' > should execute with auth 'ADMIN' and input 'ALL_WITH_EXAMPLES' > hash = 7ec47dd357212993952748c262cc7b0d6e1cb8ff635cead234af68b7efe6f4e6 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ALL_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "7ec47dd357212993952748c262cc7b0d6e1cb8ff635cead234af68b7efe6f4e6",
    "io": {
      "i": {
        "apiKey": "pk_bxa2HCdsT7CKwVSdem8fjS8rW",
        "modelName": "mistral-small-latest",
        "prompt": "Who won the FIFA World Cup in 1998 and 2018 ?",
        "transportType": "standard",
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "id": "c1a38b8a-671f-48b2-8d40-79b68d653321",
                "res": "I'm not able to process your request : {"messages":[{"content":"Answer only quick questions about Sports in general. Discard any other request.","role":"system"},{"content":"Who won the FIFA World Cup in 1998 and 2018 ?","role":"user"}],"model":"mistral-small-latest","stream":false}",
              },
            ],
            "total": 1,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'PromptLLM' > should execute with auth 'ADMIN' and input 'ONLY_MANDATORY_WITH_EXAMPLES' > hash = 8073381e2c6cfcd6fc4a673321db6945b1c33dae927286534d9d09b39505fa30 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_MANDATORY_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "8073381e2c6cfcd6fc4a673321db6945b1c33dae927286534d9d09b39505fa30",
    "io": {
      "i": {
        "apiKey": "pk_bxa2HCdsT7CKwVSdem8fjS8rW",
        "modelName": "mistral-small-latest",
        "prompt": "Who won the FIFA World Cup in 1998 and 2018 ?",
        "transportType": "standard",
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "id": "42d2a6ad-49f9-4ab4-b987-b1a9e738425a",
                "res": "I'm not able to process your request : {"messages":[{"content":"Answer only quick questions about Sports in general. Discard any other request.","role":"system"},{"content":"Who won the FIFA World Cup in 1998 and 2018 ?","role":"user"}],"model":"mistral-small-latest","stream":false}",
              },
            ],
            "total": 1,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'PromptLLM' > should execute with auth 'ADMIN' and input 'ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPL…' > hash = 2b6596a954c3f762dd73b48e2c05c2e5cbd5d68ee0076297fce68e645b374ebc 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: Api Key must be filled],
    "hash": "2b6596a954c3f762dd73b48e2c05c2e5cbd5d68ee0076297fce68e645b374ebc",
    "io": {
      "i": {
        "apiKey": undefined,
        "modelName": undefined,
        "prompt": "Who won the FIFA World Cup in 1998 and 2018 ?",
        "transportType": "standard",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'PromptLLM' > should execute with auth 'ANONYMOUS' and input 'ALL_WITH_EXAMPLES' > hash = 3705e7987010c0d67cc470fd500342fc54c485636ef50827e462060157e6532b 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ALL_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "3705e7987010c0d67cc470fd500342fc54c485636ef50827e462060157e6532b",
    "io": {
      "i": {
        "apiKey": "pk_bxa2HCdsT7CKwVSdem8fjS8rW",
        "modelName": "mistral-small-latest",
        "prompt": "Who won the FIFA World Cup in 1998 and 2018 ?",
        "transportType": "standard",
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "id": "cad06f3c-4901-4bcd-8a39-6dd83c4544a1",
                "res": "I'm not able to process your request : {"messages":[{"content":"Answer only quick questions about Sports in general. Discard any other request.","role":"system"},{"content":"Who won the FIFA World Cup in 1998 and 2018 ?","role":"user"}],"model":"mistral-small-latest","stream":false}",
              },
            ],
            "total": 1,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'PromptLLM' > should execute with auth 'ANONYMOUS' and input 'ONLY_MANDATORY_WITH_EXAMPLES' > hash = f38640f5a0ef68090f4e63d21ec8fe706b6951f88aa5c5f729f8505e3a996cfa 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_MANDATORY_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "f38640f5a0ef68090f4e63d21ec8fe706b6951f88aa5c5f729f8505e3a996cfa",
    "io": {
      "i": {
        "apiKey": "pk_bxa2HCdsT7CKwVSdem8fjS8rW",
        "modelName": "mistral-small-latest",
        "prompt": "Who won the FIFA World Cup in 1998 and 2018 ?",
        "transportType": "standard",
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "id": "4c8205da-3610-4615-83b6-4c7faeb86dd0",
                "res": "I'm not able to process your request : {"messages":[{"content":"Answer only quick questions about Sports in general. Discard any other request.","role":"system"},{"content":"Who won the FIFA World Cup in 1998 and 2018 ?","role":"user"}],"model":"mistral-small-latest","stream":false}",
              },
            ],
            "total": 1,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'PromptLLM' > should execute with auth 'ANONYMOUS' and input 'ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPL…' > hash = e1d67f0e56fd8f722a2333e620c019e9bb3ffeb5a025e9bd32c0ca54b2d75263 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: Api Key must be filled],
    "hash": "e1d67f0e56fd8f722a2333e620c019e9bb3ffeb5a025e9bd32c0ca54b2d75263",
    "io": {
      "i": {
        "apiKey": undefined,
        "modelName": undefined,
        "prompt": "Who won the FIFA World Cup in 1998 and 2018 ?",
        "transportType": "standard",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'PromptLLM' > should execute with auth 'REGULAR' and input 'ALL_WITH_EXAMPLES' > hash = 3246f435506ff1af286d4cd6b6991eb87cb4704539a5b0a78fdf844a89bfaa37 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ALL_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "3246f435506ff1af286d4cd6b6991eb87cb4704539a5b0a78fdf844a89bfaa37",
    "io": {
      "i": {
        "apiKey": "pk_bxa2HCdsT7CKwVSdem8fjS8rW",
        "modelName": "mistral-small-latest",
        "prompt": "Who won the FIFA World Cup in 1998 and 2018 ?",
        "transportType": "standard",
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "id": "2815f6b9-8b7a-4fc0-8fc6-bbb6d86583c4",
                "res": "I'm not able to process your request : {"messages":[{"content":"Answer only quick questions about Sports in general. Discard any other request.","role":"system"},{"content":"Who won the FIFA World Cup in 1998 and 2018 ?","role":"user"}],"model":"mistral-small-latest","stream":false}",
              },
            ],
            "total": 1,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'PromptLLM' > should execute with auth 'REGULAR' and input 'ONLY_MANDATORY_WITH_EXAMPLES' > hash = a73e098898608ab11c596cd95a834dd547f8f28d783a7fde2c96b2fc17c9356b 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_MANDATORY_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "a73e098898608ab11c596cd95a834dd547f8f28d783a7fde2c96b2fc17c9356b",
    "io": {
      "i": {
        "apiKey": "pk_bxa2HCdsT7CKwVSdem8fjS8rW",
        "modelName": "mistral-small-latest",
        "prompt": "Who won the FIFA World Cup in 1998 and 2018 ?",
        "transportType": "standard",
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "id": "eadc1dd8-fc27-4583-9555-2700ae5d248e",
                "res": "I'm not able to process your request : {"messages":[{"content":"Answer only quick questions about Sports in general. Discard any other request.","role":"system"},{"content":"Who won the FIFA World Cup in 1998 and 2018 ?","role":"user"}],"model":"mistral-small-latest","stream":false}",
              },
            ],
            "total": 1,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'PromptLLM' > should execute with auth 'REGULAR' and input 'ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPL…' > hash = e774acdb41288be38dd928e25500dc71ec514dde45ad1487862167ebea136b7d 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: Api Key must be filled],
    "hash": "e774acdb41288be38dd928e25500dc71ec514dde45ad1487862167ebea136b7d",
    "io": {
      "i": {
        "apiKey": undefined,
        "modelName": undefined,
        "prompt": "Who won the FIFA World Cup in 1998 and 2018 ?",
        "transportType": "standard",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;
